--- a/environment.yml
+++ b/environment.yml
@@ -5,9 +5,13 @@ channels:
 
 dependencies:
   - python >=3.6
+  - numpy
+  - numba
+  - scikit-learn  
   - julia
   - r-base
   - r-ape
+  - r-lifecycle
   - pip
   - pip:
     - qsin
